# taxi-mlops

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  prefect.yaml  pyproject.toml  requirements.txt  setup_all.sh
docker/alertmanager/: alertmanager.yml
docker/app-metrics/: Dockerfile  metrics_exporter.py
docker/loki/: loki-config.yml
docker/mlflow/: Dockerfile
docker/postgres/: init-mlflow-db.sh
docker/prometheus/: alerts.yml  prometheus.yml
docker/promtail/: promtail-config.yml
docs/: DOCUMENTATION_INDEX.md  IMPLEMENTATION-DOCS.md  README.md  REPRODUCIBILITY.md  SUMMARY.md
docs/architecture/: ARCHITECTURE.md
docs/demo/: DEMO_GUIDE.md  PRESENTATION.md
docs/guides/: CHANGELOG.md  DEPLOYMENT.md  EVALUATION.md  PREFECT_UI_QUICK_REFERENCE.md  PROJECT_OVERVIEW.md  PROJECT_REPORT.md  QUICKSTART.md  QUICKSTART_MONITORING.md  QUICKSTART_PREFECT.md  RUN_FLOWS_FROM_UI.md  TROUBLESHOOTING.md  USER_MANUAL.md
docs/services/: CONFIGURATION.md  GRAFANA_SETUP.md  GRAFANA_TROUBLESHOOTING.md  MINIO_USAGE.md  MLFLOW_USAGE.md  MONITORING.md  PREFECT_USAGE.md  QUICK_FIX_GRAFANA.md
docs/workflows/: PREFECT_WORKFLOWS.md
scripts/: compare_adapters.py  deploy_flows_for_ui.py  generate_metrics_for_grafana.py  quick_start_prefect.py  run_aggregate_results.py  run_experiment.py  run_parameter_sweep.py  run_ui.py  setup_data_bucket.py  setup_minio_bucket.py  setup_prefect.py  test_metrics.py  upload_to_minio.py  verify_setup.py
src/: __init__.py  config.py
tests/: test_adapters.py  test_pipelines.py
ui/: __init__.py  app.py  utils.py
(+35 files in other folders)
