[project]
name = "taxi-mlops"
version = "0.1.0"
description = "MLOps project for comparing DBSCAN implementations"
requires-python = ">=3.11"
dependencies = [
    "prefect>=2.14.0",
    "prefect-sqlalchemy>=0.4.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "minio>=7.2.0",
    "mlflow>=2.8.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "boto3>=1.28.0",
    "scipy>=1.11.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-jaeger-thrift>=1.21.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "geopandas>=0.14.0",
    "streamlit>=1.28.0",
    "folium>=0.14.0",
    "streamlit-folium>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

